--- a/server/index.html
+++ b/server/index.html
@@ -1,54 +1,60 @@
-<!DOCTYPE>
 <html>
-
-<head>
-    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <title>Phone Home</title>
-
-    <!-- Used for set map sizes-->
-    <link rel="stylesheet" type="text/css" href="css/style.css" media="screen" />
-
-    <!-- Core script, used to add marker on map by number of installation-->
-    <script src="js/app.js" type="text/javascript"></script>
-</head>
-
-<body>
-    <!-- Drawing the map -->
-
-    <div id="map-container">
-        <table class="example-table">
-            <tbody id=menu>
-                <tr>
-                    <th>Installations</th>
-                    <th>
-                        <ul>
-                            <li>
-                                <a id="current_interval"></a>
-                                <ul>
-                                    <li><a id="interval_week">Last week</a></li>
-                                    <li><a id="interval_month">Last month</a></li>
-                                    <li><a id="interval_6months">Last 6 months</a></li>
-                                    <li><a id="interval_year">Last year</a></li>
-                                    <li><a id="interval_all">All</a></li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </th>
-                    <th id="resume"></th>
-                </tr>
-            </tbody>
-            <div width: 100% height: 100% id="map">
-            </div>
-            <!--<tr><td><b>release_tag</b></td><td><b>num</b></td></tr>-->
-        </table>
-
+  <head>
+    <meta charset="UTF-8" />
+    <title>NethServer PhoneHome</title>
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
+      media="screen"
+    />
+    <link rel="stylesheet" href= "https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
+    <link rel="stylesheet" href= "css/leaflet-beautify-marker-icon.css">
+    <link rel="stylesheet" href= "css/style.css">
+    <link rel="icon" href="images/logoNethesis.png">
+  </head>
+  <body>
+    <br>
+    <div class="dropdown" id="dropdown">
+      <div class="dropdown-trigger">
+        <button class="button is-medium is-info" aria-haspopup="true" aria-controls="dropdown-menu" id="button">
+          <span class="icon "><img src="images/logoNethesis.png" ></hr></span>
+          <span>Installations </span>
+        </button>
+      </div>
+      <div class="dropdown-menu" id="dropdown-menu" role="menu">
+        <div class="dropdown-content">
+          <a class="dropdown-item" id="interval_week">
+            Last week 
+          </a>
+          <a  class="dropdown-item" id="interval_month">
+            Last month
+          </a>
+          <a class="dropdown-item" id="interval_6months">
+            Last 6 months
+          </a>
+          <a class="dropdown-item" id="interval_year">
+            Last year
+          </a>
+          <hr class="dropdown-divider">
+          <a class="dropdown-item" id="interval_all">
+            All
+          </a>
+        </div>
+      </div>
     </div>
-
-    <!-- Include maps and libs -->
-    <script defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCK5T0kgxsijBrZunMq075KQipzxr2G_Q8&callback=initMap" type="text/javascript"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js" type="text/javascript"></script>
-    <script src="https://www.google.com/jsapi" type="text/javascript"></script>
-    <script defer src="js/markerwithlabel.js" type="text/javascript"></script>
-</body>
-
+    <div class="button" id="totalUnity">
+    </div>
+    <div class="loader" id="loader"></div>
+    <div id="map"></div>
+    <a id="current_interval">Last week</a>
+    <script
+    type="text/javascript"
+    src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"
+    ></script>
+    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
+    <script src="js/lib/function.js"></script>
+    <script src="js/lib/leaflet-beautify-marker-icon.js"></script>  
+    <script src="js/app.js"></script>
+  </body>
 </html>
