--- a/server/index.html
+++ b/server/index.html
@@ -53,6 +53,8 @@
     src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"
     ></script>
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
+    <script src="js/map/layer.js"></script>
+    <script src="js/map/coordinates.js"></script>
     <script src="js/lib/function.js"></script>
     <script src="js/lib/leaflet-beautify-marker-icon.js"></script>  
     <script src="js/app.js"></script>
